--- a/style.css
+++ b/style.css
@@ -8,13 +8,24 @@
 .portfolio-container {
   min-height: 100vh;
   width: 100%;
-  display: flex;
-  /* background-color: #262525; */
 }
-/* nav-sec */
-/* .nav-bar {
+.container {
+  background-color: #262525;
+  clip-path: polygon(
+    0 0,
+    100% 0,
+    100% 20%,
+    100% 100%,
+    76% 79%,
+    58% 99%,
+    0 100%,
+    0% 20%
+  );
+}
+.nav-bar {
   display: flex;
-  margin: 9px;
+  padding: 16px;
+  align-items: center;
 }
 .nav-logo {
   display: inline-flex;
@@ -31,7 +42,7 @@
   padding: 5px 0px 0px 5px;
   cursor: pointer;
   color: #fff;
-} */
+}
 .nav-list {
   display: flex;
   gap: 3.5rem;
@@ -46,18 +57,7 @@ a {
   text-decoration: none;
   text-transform: uppercase;
   font-size: 1rem;
-}
-.left-container,
-.right-container {
-  height: 100vh;
-}
-.left-container {
-  background-color: #262525;
-  width: 70%;
-}
-.right-container {
-  background-color: #3877ff;
-  width: 30%;
+  color: #fff;
 }
 .icons .fa-brands {
   color: #bbb;
@@ -70,8 +70,181 @@ a {
   align-items: center;
   gap: 3rem;
 }
+.content {
+  margin-left: 4rem;
+}
+.intro {
+  font-size: 1.5rem;
+  color: #fff;
+}
+.content .intro span {
+  color: #5db9ee;
+}
+.content .detail {
+  font-size: 1.1rem;
+  color: #fff;
+  max-width: 40rem;
+  margin: 1.1rem 0 3rem 0;
+  line-height: 1.8rem;
+}
+.content h1 {
+  font-size: 4rem;
+  color: #5db9ee;
+}
 .intro-sec {
   padding-left: 3rem;
   display: flex;
   align-items: center;
+}
+.btn-container button {
+  border: 0.1rem solid #5db9ee;
+  font-size: 1.1rem;
+  padding: 0.8rem 1.5rem;
+  border-radius: 0.5rem;
+  cursor: pointer;
+  transition: 2s ease;
+}
+.content-btn-one {
+  background-color: #5db9ee;
+  color: black;
+}
+.content-btn-two {
+  background-color: transparent;
+  color: #5db9ee;
+  border-color: #5bd9ee;
+  margin-left: 2rem;
+  margin-bottom: 15px;
+}
+.content-btn-one:hover {
+  background-color: transparent;
+  color: #5bd9ee;
+}
+.content-btn-two:hover {
+  background-color: #5bd9ee;
+  color: black;
+}
+.icons .fa-brands:hover {
+  cursor: pointer;
+  background: linear-gradient(#fff, #3877ff);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+/* Home sec comp */
+/* service sec start */
+.our-services {
+  background-color: #f4f0f0;
+}
+.service-heading {
+  text-align: center;
+  padding-top: 5%;
+  line-height: 2.5;
+  font-size: 25px;
+}
+.service-heading span {
+  color: #3877ff;
+}
+.service-para {
+  margin-bottom: 1rem;
+  text-align: center;
+  color: #988c8c;
+}
+.our-services .card-wrapper {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-column-gap: 2rem;
+  grid-row-gap: 6rem;
+  padding: 5%;
+}
+.our-services .card-wrapper .card {
+  background-color: #fff;
+  padding: 3rem 2rem;
+  padding-top: 5rem;
+  text-align: center;
+  position: relative;
+  transition: all 0.3s ease;
+  border-radius: 15px;
+}
+.our-services .card-wrapper .card .svg-icon {
+  position: absolute;
+  top: -1.5rem;
+  left: 40%;
+  background-color: #3877ff;
+  padding: 5%;
+  width: 22%;
+  border: none;
+  border-radius: 9px;
+}
+.our-services .card-wrapper .card.h4 {
+  font-weight: 400;
+  font-size: 1.2rem;
+  margin-bottom: 0.5rem;
+}
+.our-services .card-wrapper .card p {
+  color: #988c8c;
+  line-height: 1.6;
+}
+.our-services .card-wrapper .card:hover {
+  background-color: black;
+}
+.our-services .card-wrapper .card h4,
+.our-services .card-wrapper .card p:hover {
+  color: #767070;
+}
+/* service sec complete */
+/* freelancer */
+.freelancer {
+  text-align: center;
+  background-image: url(images/camera.png);
+  background-repeat: no-repeat;
+  height: 100vh;
+  clip-path: polygon(
+    0 0,
+    100% 0,
+    100% 20%,
+    100% 100%,
+    76% 79%,
+    58% 99%,
+    0 100%,
+    0% 20%
+  );
+  padding: 5rem;
+}
+.freelancer h2 {
+  font-size: 3rem;
+  margin-bottom: 0.5rem;
+  color: #fff;
+}
+.freelancer p {
+  font-size: 1.3rem;
+  margin-bottom: 2rem;
+  color: #fff;
+}
+.download-cv {
+  padding: 0.8rem 3rem;
+  font-size: 1rem;
+  font-weight: 600;
+  border: 2px solid transparent;
+  outline: none;
+  cursor: pointer;
+  text-transform: uppercase;
+  border-radius: 9px;
+  border: none;
+  background-color: #3877ff;
+  transition: 3s ease;
+}
+.download-cv:hover {
+  background-color: antiquewhite;
+}
+/* freelancer sec complete */
+/* blog sec */
+.blog {
+  background-color: #262525;
+  color: #fff;
+}
+.blog-heading {
+  color: #fff;
+  text-align: center;
+  padding-top: 5%;
+  line-height: 2.5;
+  font-size: 30px;
 }
